[LocalApp] 문자열 보간

--- a/Swift_08/LocalApp/LocalApp/en.lproj/Localizable.strings
+++ b/Swift_08/LocalApp/LocalApp/en.lproj/Localizable.strings
@@ -5,5 +5,6 @@
   Created by 김혜림 on 7/3/24.
   
 */
-"greeting-label" = "Hello, World";
+"greeting-label %@" = "Hello, World %@";
 "button-lable" = "Tab me";
+"placeholder-label" = "여기에 입력하세요";
