--- a/Swift_08/LocalApp/LocalApp/fr.lproj/Localizable.strings
+++ b/Swift_08/LocalApp/LocalApp/fr.lproj/Localizable.strings
@@ -5,5 +5,6 @@
   Created by 김혜림 on 7/3/24.
   
 */
-"greeting-label" = "Bonjour le monde";
+"greeting-label %@" = "Bonjour le monde %@";
 "button-label" = "Tape moi";
+"placeholder-label" = "여기에 입력하세요";
